[package]
name = "boids"
version = "0.1.3"
edition = "2021"
description="Flocking Simulator"

[dependencies]
nannou = "0.19.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[package.metadata.bundle]
name = "boids"
identifier = "io.github.dfendr.boids"
osx_minimum_system_version="12.4"
short_description="Flocking Simulator"
